# zero2prod

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  amvera.yml  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-1831321136feda222b85ee2998f8b7c3ec9aa82f29c9f7e6f831e621de6adcba.json  query-6484a4cc20fbd13ba6fb20e5a17c0feca795e838b4346327dad8129c64a42444.json
assets/: hosting.md
configuration/: base.yaml  local.yaml
migrations/: 20250109123011_make_status_not_null_in_subscriptions.sql  20250109123551_create_subscription_tokens_table.sql  20250215133730_seed_user.sql  20250226040235_create_idempotency_table.sql  20250313032811_create_newsletter_issues_table.sql  20250313042957_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletetter.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
